Hotkeys are now smaller and align on right in menu Fix bug of infinite draw in shooting item

--- a/frameworks/TreeApp/stylesheets/TreeApp.css
+++ b/frameworks/TreeApp/stylesheets/TreeApp.css
@@ -196,6 +196,11 @@
     
 }
 
+.elem_container_key {
+    text-align:right;
+    float:right;
+    font-size:smaller;
+}
 
 .menu_img_arrow{
     border           : none !important;
